syntax = "proto3";
package coreum.feemodel.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "coreum/feemodel/v1/model.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/feemodel/types";

// GenesisState defines the auth module's genesis state.
message GenesisState {
  // params defines paramaters of the fee model.
  Model params = 1 [(gogoproto.nullable) = false];

  // min_gas_price is the current minimum gas price required by the chain.
  cosmos.base.v1beta1.Coin min_gas_price = 2 [(gogoproto.nullable) = false];
}
